更新相关链接

--- a/Models/Diffusion/2024.06.04_SimpleSpeech.md
+++ b/Models/Diffusion/2024.06.04_SimpleSpeech.md
@@ -42,8 +42,8 @@ Demos are released at this [URL](https://simplespeech.github.io/simplespeechDemo
 Text-to-speech synthesis (TTS) aims to synthesize intelligible and natural speech given text, which has made great progress in the past years [1, 2].
 Most previous TTS systems trained on small-scale high-quality labeled speech datasets.
 In terms of model training, they rely on a relatively complicated pipeline (e.g.prosody prediction, G2P conversion), and fine-grained alignment information (e.g. phone-level duration) is needed.
-However, the recently proposed approaches based on large-scale speech data significantly simplify the TTS system ([AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md), [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), [UniAudio](../../Models/Speech_LLM/2023.10.01_UniAudio.md), [Make-A-Voice](../Speech_LLM/2023.05.30_Make-A-Voice.md)).
-For instance, language model (LM) based TTS, e.g. [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) uses a pre-trained audio codec model e.g. [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) to map the speech signal into a sequence of discrete tokens, then an auto-regressive language model is trained to translate the phoneme into speech tokens.
+However, the recently proposed approaches based on large-scale speech data significantly simplify the TTS system ([AudioLM](../SpeechLM/2022.09.07_AudioLM.md), [VALL-E](../SpeechLM/2023.01.05_VALL-E.md), [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), [UniAudio](../../Models/Speech_LLM/2023.10.01_UniAudio.md), [Make-A-Voice](../Speech_LLM/2023.05.30_Make-A-Voice.md)).
+For instance, language model (LM) based TTS, e.g. [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) uses a pre-trained audio codec model e.g. [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) to map the speech signal into a sequence of discrete tokens, then an auto-regressive language model is trained to translate the phoneme into speech tokens.
 It can generate more expressive speech, but also is troubled by the slow and unstable inference.
 To address these issues, Non-autoregressive (NAR) models, e.g. [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md), and [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md), are proposed.
 They have higher inference speed and better stability, but with the cost of (1) relying on phoneme-acoustic alignment information, and (2) a more complicated training process.
