--- a/Models/Diffusion/2024.09.01_SESD.md
+++ b/Models/Diffusion/2024.09.01_SESD.md
@@ -29,7 +29,7 @@
 This work introduces ***Sample-Efficient Speech Diffusion (SESD)***, an algorithm for effective speech synthesis in modest data regimes through latent diffusion.
 It is based on a novel diffusion architecture, that we call ***U-Audio Transformer (U-AT)***, that efficiently scales to long sequences and operates in the latent space of a pre-trained audio autoencoder.
 Conditioned on character-aware language model representations, ***SESD*** achieves impressive results despite training on less than 1k hours of speech – far less than current state-of-the-art systems.
-In fact, it synthesizes more intelligible speech than the state-of-the-art auto-regressive model, [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), while using less than 2 % the training data.
+In fact, it synthesizes more intelligible speech than the state-of-the-art auto-regressive model, [VALL-E](../SpeechLM/2023.01.05_VALL-E.md), while using less than 2 % the training data.
 Our implementation is available at [Github](https://github.com/justinlovelace/SESD).
 
 </details>
@@ -38,7 +38,7 @@ Our implementation is available at [Github](https://github.com/justinlovelace/SE
 本项工作介绍了 ***样本高效语音扩散 (Sample-Efficient Speech Diffusion, SESD)***, 这是一种通过潜在扩散在适度数据条件下实现有效语音合成的算法.
 它基于一种新颖的扩散架构, 我们称为 ***U-Audio Transformer (U-AT)***，它可以有效地扩展到长序列并在预训练的音频自编码器的潜在空间中运行.
 以字符感知语言模型表示作为条件, ***SESD*** 能在不足 1k 小时的语音上训练并获得令人印象深刻的结果, 远少于现有的最先进系统.
-事实上, 它合成的语音比当前最先进的自回归模型 [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) 更易理解, 而使用的训练数据不到后者的 2%.
+事实上, 它合成的语音比当前最先进的自回归模型 [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) 更易理解, 而使用的训练数据不到后者的 2%.
 我们的实现可在 [Github](https://github.com/justinlovelace/SESD) 上获得.
 
 ## 1.Introduction: 引言
@@ -46,7 +46,7 @@ Our implementation is available at [Github](https://github.com/justinlovelace/SE
 <details>
 <summary>展开原文</summary>
 
-Neural approaches have revolutionized generative speech modeling, with recent advances driven by auto-regressive and diffusion-based systems ([VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md); [VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md)).
+Neural approaches have revolutionized generative speech modeling, with recent advances driven by auto-regressive and diffusion-based systems ([VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md); [VALL-E [2]](../SpeechLM/2023.01.05_VALL-E.md)).
 These improvements, however, come with a cost.
 Generative models are data hungry, and state-of-the-art systems have used increasingly large volumes of annotated data.
 This poses challenges for the application of these methods to low-resource domains and languages.
@@ -71,12 +71,12 @@ To increase our model's alignment with the transcript, we adjust the diffusion l
 
 With these innovations, ***SESD*** can synthesize highly intelligible speech directly from text transcripts, without the explicit phoneme alignment required by current TTS diffusion models ([VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md); [NaturalSpeech2 [5]](2023.04.18_NaturalSpeech2.md)).
 For text-only TTS, our framework achieves a word error rate (WER) of 2.3\%, nearly matching the 2.2\% WER of natural human speech.
-For speaker-prompted synthesis, ***SESD*** generates audio with a WER rate of 2.3\% and a speaker similarity score of 0.617, outperforming the state-of-the-art autoregressive model VALL-E (WER 5.9\%, similarity 0.580) which uses 62.5x times more training data ([VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md)).
+For speaker-prompted synthesis, ***SESD*** generates audio with a WER rate of 2.3\% and a speaker similarity score of 0.617, outperforming the state-of-the-art autoregressive model VALL-E (WER 5.9\%, similarity 0.580) which uses 62.5x times more training data ([VALL-E [2]](../SpeechLM/2023.01.05_VALL-E.md)).
 
 </details>
 <br>
 
-神经方法已经彻底改变了生成语音建模, 最近的进展由自回归和基于扩散的系统 ([VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md); [VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md)) 推动.
+神经方法已经彻底改变了生成语音建模, 最近的进展由自回归和基于扩散的系统 ([VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md); [VALL-E [2]](../SpeechLM/2023.01.05_VALL-E.md)) 推动.
 然而这些改进是有代价的.
 
 生成式模型需要大量数据, 而最先进的系统使用了越来越多的标注数据.
@@ -97,12 +97,12 @@ For speaker-prompted synthesis, ***SESD*** generates audio with a WER rate of 2.
 基于这些见解, 我们引入了***样本高效语言扩散 (Sample-Efficient Speech Diffusion, SESD)***, 这是一种样本高效的潜在扩散框架, 使用不到一千小时的语音数据就能取得令人印象深刻的结果.
 我们开发了一种扩散架构 ***U-Audio Transformer (U-AT)***，它可以有效地扩展到长音频序列.
 它由一个 1D U-Net 组成, 该 U-Net 在应用 Transformer 主干模型以建模全局语音特征之前对音频特征进行下采样.
-至关重要的是, 我们提出了一种位置感知的交叉注意力机制, 以条件化来自冻结的字符感知语言模型 [ByT5 [4]](../LLM/2021.05.28_ByT5.md)-base 的表示.
+至关重要的是, 我们提出了一种位置感知的交叉注意力机制, 以条件化来自冻结的字符感知语言模型 [ByT5 [4]](../TextLM/2021.05.28_ByT5.md)-base 的表示.
 为了增强模型与转录的对齐, 我们调整了扩散损失权重, 以强调在高噪声水平下的性能, 此时语音的全局结构（例如词语位置）正在被确定.
 
 通过这些创新, ***SESD*** 可以直接从文本转录生成高质量的语音, 而不需要显式的音素对齐, 这与当前的 TTS 扩散模型 ([VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md); [NaturalSpeech2 [5]](2023.04.18_NaturalSpeech2.md)) 所需的音素对齐不同.
 对于纯文本 TTS, 我们的框架能生成 2.3\% 的词错误率 (WER), 与自然人语音的 2.2\% WER 相当.
-对于说话人提示的合成，***SESD*** 生成的音频的 WER 率为 2.3%, 说话人相似度得分为 0.617, 优于使用 62.5 倍更多训练数据的最先进的自回归模型 [VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md) (WER 5.9%，相似度0.580).
+对于说话人提示的合成，***SESD*** 生成的音频的 WER 率为 2.3%, 说话人相似度得分为 0.617, 优于使用 62.5 倍更多训练数据的最先进的自回归模型 [VALL-E [2]](../SpeechLM/2023.01.05_VALL-E.md) (WER 5.9%，相似度0.580).
 
 ## 2.Related Works: 相关工作
 
@@ -176,7 +176,7 @@ Hybrid U-Net/transformer architectures have shown promise for high-resolution im
 ### Position-Aware Cross-Attention.
 
 Properly aligning the generated speech with the input transcript is a critical challenge in text-to-speech synthesis.
-To improve alignment, we introduce position-aware cross-attention layers in the transformer model that attend to transcript representations from a frozen [ByT5 [4]](../LLM/2021.05.28_ByT5.md)-base encoder.
+To improve alignment, we introduce position-aware cross-attention layers in the transformer model that attend to transcript representations from a frozen [ByT5 [4]](../TextLM/2021.05.28_ByT5.md)-base encoder.
 To explicitly incorporate positional information about the tokens in the transcript, we introduce a neural Position Encoder that maps the relative positions of the transcript tokens to key vectors.
 We sum these positional key vectors with the corresponding key vectors from the ByT5 embedding in the cross-attention mechanism.
 This allows the model to directly search for and attend to the relevant positions within the transcript when generating each audio frame.
@@ -279,7 +279,7 @@ Full implementation details and model checkpoints are provided in our code relea
 ## 4.Experiments: 实验
 
 We utilize the clean and other training splits of the [LibriSpeech (LS) dataset [26]](../../Datasets/2015.04.19_LibriSpeech.md), totaling 960 hours of speech, to train ***SESD***.
-For evaluation, we follow prior work ([VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md); [VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md)) and consider a filtered subset of LS test-clean consisting of clips between four and ten seconds in length.
+For evaluation, we follow prior work ([VALL-E [2]](../SpeechLM/2023.01.05_VALL-E.md); [VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md)) and consider a filtered subset of LS test-clean consisting of clips between four and ten seconds in length.
 For speaker-prompted TTS, we utilize a 3 second clip from another sample of the same speaker.
 
 ### Baselines.
@@ -288,14 +288,14 @@ For text-only synthesis, we compare against [VITS [27]](../E2E/2021.06.11_VITS.m
 We consider both VITS variants: the single-speaker VITS-LJ trained on LJ Speech, and the multi-speaker VITS-VCTK trained on VCTK.
 We also compare against English [MMS-TTS [28]](../_tmp/2023.05.22_MMS-TTS.md), a recent single-speaker model.
 For speaker-prompted TTS, we compare against [YourTTS [29]](../E2E/2021.12.04_YourTTS.md), a VITS model conditioned on a speech prompt.
-We follow the evaluation protocol of the recent state-of-the-art generative models such as [VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md) and [VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md) and compare against their reported metrics.
-We also compare against the speech-to-speech baselines [GSLM [30]](../Speech_LLM/2021.02.01_GSLM.md) and [AudioLM [31]](../Speech_LLM/2022.09.07_AudioLM.md).
+We follow the evaluation protocol of the recent state-of-the-art generative models such as [VALL-E [2]](../SpeechLM/2023.01.05_VALL-E.md) and [VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md) and compare against their reported metrics.
+We also compare against the speech-to-speech baselines [GSLM [30]](../SpeechLM/2021.02.01_GSLM.md) and [AudioLM [31]](../SpeechLM/2022.09.07_AudioLM.md).
 
 ### Evaluation Metrics.
 
 To evaluate the intelligibility of the synthesized audio, we transcribe the speech with a pre-trained ASR model and compute the WER between the transcribed text and original transcript.
-We use the [HuBERT [32]](../Speech_Representaion/2021.06.14_HuBERT.md)-L model employed by prior work ([VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md); [VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md)) ([HuggingFace](https://huggingface.co/facebook/hubert-large-ls960-ft)).
-For speaker-prompted TTS, we evaluate the similarity between the prompt and synthesized speech by utilizing the pre-trained speaker verification model from prior work ([VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md); [VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md)).
+We use the [HuBERT [32]](../Speech_Representaion/2021.06.14_HuBERT.md)-L model employed by prior work ([VALL-E [2]](../SpeechLM/2023.01.05_VALL-E.md); [VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md)) ([HuggingFace](https://huggingface.co/facebook/hubert-large-ls960-ft)).
+For speaker-prompted TTS, we evaluate the similarity between the prompt and synthesized speech by utilizing the pre-trained speaker verification model from prior work ([VALL-E [2]](../SpeechLM/2023.01.05_VALL-E.md); [VoiceBox [1]](../Speech_LLM/2023.06.23_VoiceBox.md)).
 The WavLM-Large model released at [Github](https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification).
 We report the cosine similarity between speaker embeddings for the re-synthesized prompt and synthesized speech.
 
