--- a/Models/Diffusion/2024.06.17_DiTTo-TTS.md
+++ b/Models/Diffusion/2024.06.17_DiTTo-TTS.md
@@ -70,10 +70,10 @@ Additionally, we demonstrate that our model scales effectively with increases in
 ### Large-scale TTS
 Recently, large-scale TTS research progresses actively in two main directions: LLM-based autoregressive (AR) TTS and non-autoregressive (Non-AR) TTS.
 A prominent feature of LLMs is the scalability [16], [17] and their proficiency in zero-shot learning tasks, demonstrating significant capabilities without prior specific training on those tasks [18], [19], [20], [21].
-Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../Speech_LLM/2023.11.14_Qwen-Audio.md)).
-[VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) employs [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) for speech-to-token mapping, posing TTS tasks as AR language modeling tasks, thus enabling zero-shot capabilities in the speech domain.
+Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md); [AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../Speech_LLM/2023.11.14_Qwen-Audio.md)).
+[VALL-E](../SpeechLM/2023.01.05_VALL-E.md) employs [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) for speech-to-token mapping, posing TTS tasks as AR language modeling tasks, thus enabling zero-shot capabilities in the speech domain.
 [CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md) introduces Mel-VAE to achieve superior token length compression, and enables a language model to predict multiple tokens simultaneously.
-Although this approach removes the need for cascaded modeling ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md)) to manage the number of token streams, their resource-intensive inference processes limit their applications [30].
+Although this approach removes the need for cascaded modeling ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md)) to manage the number of token streams, their resource-intensive inference processes limit their applications [30].
 On the other hand, Non-AR generative models are employed to enhance the efficiency of TTS systems.
 [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) utilizes a flow matching [32] to generate speech, effectively casting the TTS task into a speech infilling task.
 NaturalSpeech series ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)), building upon recent advances in the [Latent Diffusion Model (LDM)](2021.12.20_LDM.md), incorporate auxiliary modules for controllability of various speech attribute such as content, prosody, and timbre.
@@ -91,7 +91,7 @@ In the context of TTS, however, applying LDMs to TTS ([NaturalSpeech2](../../Mod
 This is primarily due to the need for precise temporal alignment between text and speech, as well as the higher fidelity requirements inherent in audio data.
 
 ### Neural Audio Codec
-Neural audio codecs, which effectively compress various types of audio using neural networks, are used as part of many TTS systems ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md); [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md)).
+Neural audio codecs, which effectively compress various types of audio using neural networks, are used as part of many TTS systems ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md); [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)).
 Recent advancements employ an encoder-decoder architecture coupled with Residual Vector Quantization (RVQ) [41], [42], [43] to transform raw audio waves into discretized tokens.
 For example, [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) converts 24,000 Hz mono waveforms into 75 Hz latents.
 With a similar architecture, by focusing the compression specifically on speech rather than general audio signals, Mel-VAE ([CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md)) achieves approximately 10.76 Hz latents by compressing the mel-spectrogram.
