--- a/Models/SpeechLM/2024.10.24_STTATTS.md
+++ b/Models/SpeechLM/2024.10.24_STTATTS.md
@@ -33,6 +33,12 @@ Our models are trained with publicly available data, and both the training code 
 </details>
 <br>
 
+语音识别和语音合成模型通常是分别进行训练的, 各自拥有自己的学习目标, 训练数据和模型参数, 最终形成两个独立的大型网络.
+我们提出了一种参数高效的方法, 通过多任务学习目标和共享参数来联合学习 ASR (自动语音识别) 和 TTS (文本到语音).
+我们的评估显示, 我们的多任务模型性能与单独训练的模型相当, 同时显著节省了计算和内存成本 (大约减少了合并两个任务所需总参数数量的 50%).
+我们分别使用英语作为资源丰富的语言以及阿拉伯语作为相对低资源的语言进行了实验, 后者由于缺少 TTS 数据而具有代表性.
+我们的模型训练采用公开可用的数据, 并且训练代码和模型检查点都开放可用以供进一步研究.
+
 ## 1.Introduction: 引言
 
 ## 2.Related Works: 相关工作
