--- a/Models/SpeechLM/2024.07.11_MELLE.md
+++ b/Models/SpeechLM/2024.07.11_MELLE.md
@@ -23,7 +23,7 @@
   - [Github]()
   - [Demo](https://aka.ms/melle)
 - 文件:
-  - [ArXiv] #TODO
+  - [ArXiv](_PDF/2407.08551v1__MELLE__Autoregressive_Speech_Synthesis_without_Vector_Quantization.pdf)
   - [Publication] #TODO
 
 </details>
@@ -95,9 +95,9 @@ For subjective evaluations, ***MELLE*** is more favorably received by human list
 Traditional speech synthesis methods can be categorized concatenative systems, parametric systems, and end-to-end neural systems.
 Concatenative TTS systems deconstruct original audio waves into smaller segments and then reassembles them using algorithms like Viterbi, followed by signal processing techniques, to create new audio waves.
 Parametric TTS systems convert speech waves into spectrograms, utilizing acoustic parameters such as fundamental frequency and duration to synthesize new audio outputs.
-With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md)).
+With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../TTS2_Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md)).
 
-The advanced end-to-end neural TTS models, such as [Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md), and [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
+The advanced end-to-end neural TTS models, such as [Tacotron](../TTS2_Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md), and [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
 TransformerTTS employs Transformer-based encoder-decoder network as the main framework to replace RNN structures in Tacotron.
 FastSpeech further improve the speech quality and decoding efficiency using the non-autoregressive generation model with a duration module.
 These model are trained on small-scale, clean, single-speaker or few-speaker dataset, such as LJSpeech and LibriTTS.
@@ -132,16 +132,16 @@ Motivated by the zero-shot and in-context learning capabilities of large languag
 **VALL-E (2023)** first regards TTS tasks as a conditional language task, which utilizes neural codec codes as intermediate representation instead of mel-spectrogram, then uses a codec decoder to recover the waveform from predicted codec codes.
 VALL-E employs two-stage modeling method, with an autoregressive model for generating coarse audio tokens, followed by a non-autoregressive model to iteratively predict multi-codebook codes for refinement.
 **VALL-E X (2023)** extends VALL-E into multi-lingual scenario to support zero-shot cross-lingual speech synthesis and speech-to-speech translation.
-[Mega-TTS](../../Models/Speech_LLM/2023.06.06_Mega-TTS.md) proposes to disentangle the multiple attributes in speech, such as content, timbre, prosody, and phase attributes, then model each of them according to their intrinsic properties with a language modeling approach.
-**ELLA-V (2024)**, [RALL-E](../../Models/Speech_LLM/2024.04.04_RALL-E.md), and [VALL-E R](../../Models/Speech_LLM/2024.06.12_VALL-E_R.md) aims to improve robustness and stability of VALL-E via additional fine-grained speech-text alignment information.
-[BASE TTS](../../Models/Speech_LLM/2024.02.12_BASE-TTS.md) employs discrete tokens derived from [WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md) and scales the codec language model to larger parameters and training data.
-[Seed-TTS](2024.06.04_Seed-TTS.md) replaces NAR model in VALL-E with a diffusion model, which generates continuous speech representations according generated speech tokens from AR stage.
+[Mega-TTS](../Speech_LLM/2023.06.06_Mega-TTS.md) proposes to disentangle the multiple attributes in speech, such as content, timbre, prosody, and phase attributes, then model each of them according to their intrinsic properties with a language modeling approach.
+**ELLA-V (2024)**, [RALL-E](../Speech_LLM/2024.04.04_RALL-E.md), and [VALL-E R](../Speech_LLM/2024.06.12_VALL-E_R.md) aims to improve robustness and stability of VALL-E via additional fine-grained speech-text alignment information.
+[BASE TTS](../Speech_LLM/2024.02.12_BASE-TTS.md) employs discrete tokens derived from [WavLM](../Speech_Representaion/2021.10.26_WavLM.md) and scales the codec language model to larger parameters and training data.
+[Seed-TTS](../Speech_LLM/2024.06.04_Seed-TTS.md) replaces NAR model in VALL-E with a diffusion model, which generates continuous speech representations according generated speech tokens from AR stage.
 In parallel to our work, **VALL-E 2 (2024)** shares the same architecture as VALL-E but employs a repetition-aware sampling strategy that promotes more deliberate sampling choices.
 
 Other studies have investigated fully non-autoregressive approaches to increase the speed of model inference.
-For instance, [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
-[StyleTTS2](../../Models/Speech_LLM/2023.06.13_StyleTTS2.md) and [NaturalSpeech 3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) use diffusion model to achieve better TTS synthesis.
-[Voicebox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) and [Audiobox](../../Models/Speech_LLM/2023.12.25_Audiobox.md) employ non-autoregressive flow-matching based models for transcript-guided speech generation.
+For instance, [SoundStorm](../Speech_LLM/2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
+[StyleTTS2](../Speech_LLM/2023.06.13_StyleTTS2.md) and [NaturalSpeech 3](../Diffusion/2024.03.05_NaturalSpeech3.md) use diffusion model to achieve better TTS synthesis.
+[Voicebox](../Speech_LLM/2023.06.23_VoiceBox.md) and [Audiobox](../Speech_LLM/2023.12.25_Audiobox.md) employ non-autoregressive flow-matching based models for transcript-guided speech generation.
 Recently, [E2 TTS](../Flow/2024.06.26_E2_TTS.md) presents a fully non-autoregressive TTS systems consisting of flow-matching-based mel-spectrogram generator trained with the audio infilling task, and a vocoder.
 Different previous works, ***MELLE*** leverages continuous-valued tokens based autoregressive language modeling approach with variational inference for text-to-speech synthesis.
 
@@ -224,12 +224,12 @@ $$
 
 ### 3.2.Architecture: 架构
 
-![](Images/2024.07.11_MELLE_Fig.01.png)
+![](../Speech_LLM/Images/2024.07.11_MELLE_Fig.01.png)
 
 <details>
 <summary>原文</summary>
 
-As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md)).
+As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md)).
 Finally, a vocoder is used to recover the speech from generated mel-spectrogram.
 
 Unlike neural codec language models that iteratively predict multi-layer codec codes, we do not require an additional non-autoregressive (NAR) model thanks to the completeness of the mel-spectrogram.
@@ -277,9 +277,9 @@ The output of the LM $\pmb{e}_t$ at time step $t$ is subsequently processed by t
 <summary>原文</summary>
 
 Sampling strategy is an critical part in TTS systems, as it not only introduces diversity in the output, but also enhances the generalization ability of the model.
-For example, Tacotron-like models ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
+For example, Tacotron-like models ([Tacotron](../TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../TTS2_Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
 Neural codec language models (**VALL-E (2023)**; **VALL-E X (2023)**) adopt the top-p random sampling to avoid the collapse outputs leading by greedy search;
-Diffusion-based ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution.
+Diffusion-based ([NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](../Speech_LLM/2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution.
 
 In this study, inspired by variational autoencoders (VAEs) \citep{kingma2014vae, blei2017vi_review}, we integrate a novel latent sampling module within ***MELLE***, aimed at enhancing both expressive diversity and robustness, as shown in Figure \ref{fig:modules} (left).
 Based on $\pmb{e}_t$, the output of the LM, this module predicts a distribution, from which a latent embedding $\pmb{z}_t$ is sampled.
@@ -306,7 +306,7 @@ Note that the latent sampling module is differentiable with the reparameterizati
 </details>
 <br>
 
-![](Images/2024.07.11_MELLE_Fig.02.png)
+![](../Speech_LLM/Images/2024.07.11_MELLE_Fig.02.png)
 
 采样策略是文本转语音系统的核心部分, 不仅在输出中引入多样性, 还能增强模型的泛化能力.
 例如, Tacotron 类模型在推理时在他们的预网络中启用随机失活以引入变化.
@@ -341,7 +341,7 @@ $$
 
 Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an `<EOS>` token to indicate the end of generation.
 Instead, we use a linear layer as a binary classifier, taking $\pmb{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
-Following previous neural TTS models ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right).
+Following previous neural TTS models ([Tacotron](../TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../TTS2_Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right).
 During training, the model is trained using teacher-forcing; while during inference, post-net processes $\pmb{y}'$ after the AR generation concludes.
 
 </details>
